<resources>
    <string name="app_name">BlueLemon</string>
    <string name="we_re_almost_there">WE’RE ALMOST THERE</string>
    <string name="password_revive">You lost the password for your heart, let’s work on reviving it</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="confirm">Confirm</string>

    <string name="all">All</string>
    <string name="documents">Documents</string>
    <string name="training">Training</string>
    <string name="risks">Risks</string>
    <string name="equipment">Equipment</string>
    <string name="incidents">Incidents</string>
    <string name="my_alerts">My Alerts</string>
    <string name="received_alerts">Received Alerts</string>
    <string name="my_incidents">My Incidents</string>
    <string name="assigned_incidents">Assigned Incidents</string>
    <string name="expiring_soon">Expiring Soon</string>
    <string name="expired">Expired</string>
    <string name="expires_in">Expires in 30 days</string>

    <string-array name="yes_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="certificates">Certificates</string>

    <string-array name="tabs">
        <item>Documents</item>
        <item>Training</item>
        <item>Risks</item>
        <item>Equipment</item>
        <item>Incidents</item>
    </string-array>

    <string name="hello_blank_fragment">Blank fragment</string>
    <string name="search_hint">Search for anything or nothing at all</string>
    <string name="add_new_document">Add new document</string>
    <string name="add_new_certificate">Add new certificate</string>
    <string name="congrats">CONGRATS</string>
    <string name="password_resetted">You have successfully resetted your password. Enjoy your BlueLemon</string>
    <string name="login">Login</string>
    <string name="slogan">MAKE YOUR LIFE EASIER\nAND YOUR WORKPLACE SAFER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="current">Current</string>
    <string name="password_doesn_t_match">Password doesn\'t match</string>
    <string name="edit_file">Edit File</string>
    <string name="renew_document">Renew Document</string>
    <string name="download">Download</string>
    <string name="back_home">Back home</string>
    <string name="instant_security_alert">INSTANT SECURITY ALERT</string>
    <string name="pin_my_current_location">Pin my current location</string>
    <string name="cancel_search">Cancel Search</string>
    <string name="searching_for_your_location">SEARCHING FOR YOUR LOCATION</string>
    <string name="risk_title">Risk Title</string>
    <string name="risk_type">Risk Type</string>
    <string name="team">Team</string>
    <string name="tell_about_incident">Please tell us about the risky incident in couple of lines…</string>
    <string name="add_image_of_the_incident">Add Image of the incident</string>
    <string name="this_risk_has_action_plans">THIS RISK HAS\nACTION PLANS</string>
    <string name="check_plans">Check Plans</string>
    <string name="send_alert">SEND ALERT</string>
    <string name="notice">Notice!</string>
    <string name="are_you_sure_you_want_to_proceed">you are sending alert to this group\nare you sure you want to proceed?</string>
    <string name="view">View</string>
    <string name="document_title">Document Title</string>
    <string name="sites">Sites</string>
    <string name="category">Category</string>
    <string name="renewal_date">Renewal Date</string>
    <string name="upload_the_file_pdf">Upload the file (pdf)</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="create_new_folder">Create New Folder</string>
    <string name="show_all_folders">Show all folders</string>
    <string name="add_equipment">Add new equipment</string>
    <string name="here_goes_the_new_folder_name">Here goes the new folder name</string>
    <string name="view_equipment">View Equipment</string>
    <string name="edit_equipment">Edit Equipment</string>
    <string name="move_selected_to_folder">Move selected to folder</string>
    <string name="ref_number">Ref. Number</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="serial_number">Serial Number</string>
    <string name="entered_by">Entered By</string>
    <string name="template">Template</string>
    <string name="department">Department</string>
    <string name="check_days">Check every (Days)</string>
    <string name="next_check_due">Next Check Due</string>
    <string name="check_requirements">Check Requirements</string>
    <string name="add_more_requirement">Add more requirement</string>
    <string name="upload_images">Upload images</string>
    <string name="comments">Comments</string>
    <string name="type_here">Type here...</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="quarantine">Quarantine</string>
    <string name="out_of_use">Out of use</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="add_alert">ADD ALERT</string>
    <string name="recent_unchecked_alerts">Recent Unchecked Alerts</string>
    <string name="recent_alerts">Recent Alerts</string>
    <string name="remind">Remind</string>
    <string name="trainings">Trainings</string>
    <string name="courses">Courses</string>
    <string name="date_completed">Date Completed</string>
    <string name="complete">Complete</string>
    <string name="course_subject">Course Subject:</string>
    <string name="course_venue">Course Venue:</string>
    <string name="tutor">Tutor:</string>
    <string name="date_and_time"><![CDATA[Date & Time:]]></string>
    <string name="attendees">Attendees</string>
    <string name="notes">Notes</string>
    <string name="signature">Signature</string>
    <string name="the_action_plan">THE ACTION PLAN</string>
    <string name="save">Save</string>
    <string name="actions_hint">Here are some Action plans you can follow to be safe.</string>
    <string name="you_can_benefit">You can benefit from a list of guidance related to your Risk</string>
    <string name="select_the_file_s_you_want_to_share">Select the file(s) you want to share</string>
    <string name="no_incidents_message">Sorry there are no added incidents in this place would you like to start your first</string>
    <string name="report_an_incident">Report an incident</string>
    <string name="reported_by">Reported By</string>
    <string name="investigator">Investigator</string>
    <string name="begin_investigation">Begin Investigation</string>
    <string name="completed">COMPLETED!</string>
    <string name="incident_with_injury">Incident with injury</string>
    <string name="near_miss">Near miss</string>
    <string name="accident_category">Accident Category</string>
    <string name="time">Time</string>
    <string name="add_person">Add Person</string>
    <string name="accident_value">Accident Value</string>
    <string name="accident_location">Accident Location</string>
    <string name="accident_venue">Accident Venue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contacts">Contacts</string>
    <string name="job_title">Job Title</string>
    <string name="post_code">Post Code</string>
    <string name="address">Address</string>
    <string name="riddor_accident">Riddor Accident</string>
    <string name="position">Position</string>
    <string name="level_0">Level 0</string>
    <string name="no_further_actions_neeeded">No further actions neeeded</string>
    <string name="level_1">Level 1</string>
    <string name="further_actions_and_follow_up_neeeded">Further actions and follow-up neeeded</string>
    <string name="level_2">Level 2</string>
    <string name="human_factor">Human Factor</string>
    <string name="environmental_factor">Environmental Factor</string>
    <string name="cancel">Cancel</string>
    <string name="status">Status</string>
    <string name="dates">Dates</string>
    <string name="show_results">SHOW RESULTS</string>
    <string name="general_information">GENERAL INFORMATION</string>
    <string name="accident_date">Accident Date</string>
    <string name="images">Images</string>
    <string name="equipment_description">Equipment Description</string>
    <string name="add_photos">Add photos</string>
</resources>
