<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrayTransparent"
    tools:context=".Fragments.NewEquipmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/ref_number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:text="LX MAILLON 001"
            android:background="@drawable/input_field_gray_stroke"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/make"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:text="Mallion 12"
            android:background="@drawable/input_field_gray_stroke"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/model"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/input_field_gray_stroke"
            android:text="DELTA"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/serial_number"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/input_field_gray_stroke"
            android:text="B687077"
            style="@style/InputField" />
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:background="@color/fieldColorGrayTransparent"
            android:paddingStart="25dp"
            android:paddingEnd="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/hintColor"
                android:textSize="12sp"
                android:fontFamily="@font/opensans"
                android:text="@string/entered_by" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/hintColor"
                android:textSize="12sp"
                android:fontFamily="@font/opensans_semibold"
                android:layout_alignParentEnd="true"
                android:text="Chris Davies" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="Equipment Description (ID 1543)"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:text="10 rung Jacobs ladder on roof PEL 22	"
            android:background="@drawable/input_field_gray_stroke"
            android:gravity="start"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/template"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:text="Stair Climber"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/sites"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:text="Hera"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/department"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:text="ELEX"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/check_days"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/input_field_gray_stroke"
            android:text="180"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/next_check_due"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/input_field_gray_stroke"
            style="@style/InputField">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="13 November 2018"
                style="@style/SmallText" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/calendar_icon"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:textColor="@color/hintColorPassword"
            android:text="@string/check_requirements"
            android:drawableEnd="@drawable/up_arrow"
            android:gravity="center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/input_field_gray_stroke"
                style="@style/InputField">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/add_more_requirement"
                    style="@style/SmallText" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/plus"
                    android:tint="@color/lightGray"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/requirements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            style="@style/InputField"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="5dp"
                android:src="@mipmap/ic_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_images"
                android:textSize="12.5sp"
                android:fontFamily="@font/opensans"
                android:textColor="@color/hintColorPassword"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/comments"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:hint="@string/type_here"
            android:background="@drawable/input_field_gray_stroke"
            android:gravity="start"
            style="@style/InputField" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="100dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/opensans_semibold"
                style="@style/ButtonGreen"
                android:text="@string/pass"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/opensans_semibold"
                style="@style/ButtonRed"
                android:text="@string/fail"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="3dp"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/opensans_semibold"
                style="@style/ButtonYellow"
                android:text="@string/quarantine"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/opensans_semibold"
                style="@style/ButtonGray"
                android:text="@string/out_of_use"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>