<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewDocumentFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/certificate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:fontFamily="@font/opensans"
                android:textColor="@color/hintColorPassword"
                android:background="@drawable/input_field_gray"
                android:text="@string/certificates"/>

            <TextView
                android:id="@+id/document"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:fontFamily="@font/opensans"
                android:textColor="@color/hintColorPassword"
                android:background="@drawable/input_field_gray"
                android:text="@string/documents"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/document_title"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/input_field_gray_stroke"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/sites"
            />

        <TextView
            android:id="@+id/sites"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/category"
            />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/InputField" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/SmallText"
            android:text="@string/renewal_date"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="45dp"
            style="@style/InputField">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/SmallText" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                style="@style/ButtonRed"
                android:text="@string/close"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>